--- a/Fontend/src/components/HomePage/HomePage.css
+++ b/Fontend/src/components/HomePage/HomePage.css
@@ -1,33 +1,43 @@
 .HomePage {
-    background-color: rgb(152, 230, 255);
-    display: inline;
+    display: inline-flex;
+    background-color: white;
     margin: auto;
-    width: 100%;
-    height: 100%;
+    background-size: cover;
     align-items: center;
     justify-content: center;
-    text-align: center;
 }
+
 .Home-header {
-    background-color: darkseagreen;
+    background-color: #555;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 80px;
-    display: inline;
+    height: 125px;
     align-items: center;
     box-shadow: 0 0 25px 0 black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
 }
 .Nav-Bar{
-    display: inline-list-item;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
 }
+
 .Home-body {
-    height: 125vh;
+    display: block;
+    height: 100%;
     background-size: cover;
     font-family: sans-serif;
-    margin-top: 80px;
-    padding: 30px;
+    margin-bottom: 130px;
     align-items: center;
     text-align: center;
+    padding-bottom: 50%;
+    padding-top: 60%;
 }
