--- a/Fontend/src/components/CreateEvent/CreateEvent.css
+++ b/Fontend/src/components/CreateEvent/CreateEvent.css
@@ -3,7 +3,7 @@
     width: 50%;
     background-size: cover;
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     display: table-cell;
     text-align: center;
     vertical-align: middle;
@@ -11,15 +11,17 @@
 }
 .CreateEventPage{
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     background-color: white;
     margin: auto;
     display: flex;
     background-size: cover;
+    flex-direction: column;
+    /*padding-top: 125px;*/
 }
 .Event-header{
     background-color: #555;
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     left: 0;
     right: 0;
@@ -28,8 +30,8 @@
     box-shadow: 0 0 25px 0 black;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    justify-items: center;
+    /*justify-content: space-between;*/
+    /*justify-items: center;*/
     width: 100%;
     z-index: 99;
 }
@@ -56,7 +58,7 @@
     height: 100%;
     background-size: cover;
     font-family: sans-serif;
-    margin-top: 130px;
+    /*margin-top: 130px;*/
     padding: 30px;
     align-items: center;
     text-align: center;
