--- a/Fontend/src/components/CreateEvent/CreateEventForm.css
+++ b/Fontend/src/components/CreateEvent/CreateEventForm.css
@@ -21,3 +21,27 @@
     padding: 1rem;
     border: 0.15rem solid #000;
 }
+
+.Event-form {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 50%;
+    margin: 1rem auto;
+    padding: 1rem;
+    border: 0.15rem solid #000;
+    top: 130px;
+}
+
+.Event-input {
+    display: block;
+}
+
+.Form-button {
+    margin: 1rem auto;
+}
+
+.Form-Div {
+    margin: 1rem auto;
+    width: 50%;
+    padding: 1rem;
+    border: 0.15rem solid #000;
+}
