--- a/Fontend/src/components/CreateEvent/CreateEvent.css
+++ b/Fontend/src/components/CreateEvent/CreateEvent.css
@@ -3,35 +3,31 @@
     width: 50%;
     background-size: cover;
     align-items: center;
-    /*justify-content: center;*/
     display: table-cell;
     text-align: center;
     vertical-align: middle;
+    overflow: auto;
     top: 130px;
 }
 .CreateEventPage{
     align-items: center;
-    /*justify-content: center;*/
-    background-color: white;
     margin: auto;
+    overflow: auto;
     display: flex;
     background-size: cover;
     flex-direction: column;
-    /*padding-top: 125px;*/
+    background-color: darkseagreen;
 }
 .Event-header{
     background-color: #555;
-    /*position: fixed;*/
     top: 0;
     left: 0;
     right: 0;
     height: 125px;
     align-items: center;
-    box-shadow: 0 0 25px 0 black;
+    box-shadow: 0 0 25px 0 darkolivegreen;
     display: flex;
     flex-direction: row;
-    /*justify-content: space-between;*/
-    /*justify-items: center;*/
     width: 100%;
     z-index: 99;
 }
@@ -43,6 +39,12 @@
     justify-items: center;
     padding-left: 5%;
     padding-right: 5%;
+}
+
+.title{
+    padding-top: 20px;
+    align-self: center;
+    font-family: Roboto, sans-serif;
 }
 
 .Tab-Bar{
@@ -58,7 +60,6 @@
     height: 100%;
     background-size: cover;
     font-family: sans-serif;
-    /*margin-top: 130px;*/
     padding: 30px;
     align-items: center;
     text-align: center;
