--- a/Fontend/src/components/LoginPage/LoginPage.css
+++ b/Fontend/src/components/LoginPage/LoginPage.css
@@ -10,8 +10,8 @@
 }
 .LoginPage{
     align-self: center;
-    justify-content: center;
-    background-color: white;
+    /*justify-content: center;*/
+    background-color: darkseagreen;
     margin: auto;
     display: flex;
     background-size: cover;
@@ -21,21 +21,22 @@
 
 .title{
     align-self: center;
+    padding-top: 5%;
 }
 
 .Login-header {
     background-color: #555;
-    /*position: fixed;*/
     top: 0;
     left: 0;
     right: 0;
     height: 125px;
-    /*align-items: center;*/
     box-shadow: 0 0 25px 0 black;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     justify-items: center;
+    font-family: Roboto, sans-serif;
+
 }
 .Nav-Bar{
     display: flex;
@@ -44,6 +45,8 @@
     justify-items: center;
     padding-left: 5%;
     padding-right: 5%;
+    font-family: Roboto, sans-serif;
+
 }
 
 .Tab-Bar{
@@ -53,12 +56,14 @@
     justify-items: center;
     padding-left: 5%;
     padding-right: 5%;
+    font-family: Roboto, sans-serif;
+
 }
 
 .Login-body {
     height: 100%;
     background-size: cover;
-    font-family: sans-serif;
+    font-family: Roboto, sans-serif;
     margin-top: 130px;
     padding: 30px;
     align-self: center;
