--- a/Fontend/src/components/NavBar/NavBar.css
+++ b/Fontend/src/components/NavBar/NavBar.css
@@ -13,8 +13,9 @@
     padding: 10px;
     color: white;
     text-decoration: none;
+    font-family: Roboto, sans-serif;
     font-size: 17px;
-    width: 20%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
+    /*width: 20%; !* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. *!*/
     text-align: center; /* If you want the text to be centered */
 }
 
