--- a/Fontend/src/components/QueryPage/QueryPage.css
+++ b/Fontend/src/components/QueryPage/QueryPage.css
@@ -9,28 +9,54 @@
     box-shadow: 0 0 25px 0 black;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    justify-items: center;
+    font-family: Roboto, sans-serif;
+
 }
 .Nav-Bar{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     justify-items: center;
+    font-family: Roboto, sans-serif;
+
     padding-left: 5%;
     padding-right: 5%;
 }
 
+.QueryPage{
+    align-items: center;
+    margin: auto;
+    overflow: auto;
+    display: flex;
+    background-size: cover;
+    flex-direction: column;
+    background-color: darkseagreen;
+}
+
 .Event-Table {
     position: fixed;
+    width: 75%;
     top: 200px;
+    font-family: Roboto, sans-serif;
+    background-color: rgb(165,201,165);
+
 }
 
 .card{
     width : 100%;
     height: 100%;
     font-size: 13px;
+    background-color: rgb(165,201,165);
+    font-family: Roboto, sans-serif;
+
 }
-.card-title{
+.card-text{
     font-size: 22px;
+    font-family: Roboto, sans-serif;
+}
+.card-footer{
+    background-color: rgb(165,201,165);
+}
+.text-muted{
+    padding-right: 5%;
 }
