--- a/Fontend/src/components/HomePage/HomePage.css
+++ b/Fontend/src/components/HomePage/HomePage.css
@@ -5,8 +5,8 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(152,251,152, 0.5);
-    background-image: url('lendahand.png');
+    background-color: darkseagreen;
+    background-image: url('hands.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -19,8 +19,8 @@
     background-size: cover;
     font-family: sans-serif;
     text-align: center;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     width: 100%;
 }
 
@@ -30,7 +30,7 @@
     display: inline-table;
     width: 100%;
     height: 100%;
-    font-family: Roboto, sans-serif;
-    font-style: initial;
+    font-family: "Lucida Bright", sans-serif;
+    font-style: italic;
     font-size: 48px;
 }
