--- a/Fontend/src/components/QueryPage/QueryPage.css
+++ b/Fontend/src/components/QueryPage/QueryPage.css
@@ -46,7 +46,7 @@
     width : 100%;
     height: 100%;
     font-size: 13px;
-    background-color: rgb(165,201,165);
+    background-color: rgb(187,214,187);
     font-family: Roboto, sans-serif;
 
 }
@@ -57,6 +57,11 @@
 .card-footer{
     background-color: rgb(165,201,165);
 }
+
+.Donate-button{
+    padding-left: 4px;
+}
+
 .text-muted{
-    padding-right: 5%;
+    padding-right: 2%;
 }
